--- a/MyShop.DataAcess.InMemory/MyShop.DataAcess.InMemory.csproj
+++ b/MyShop.DataAcess.InMemory/MyShop.DataAcess.InMemory.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contracts\IRepository.cs" />
     <Compile Include="InMemoryRepository.cs" />
     <Compile Include="_ProductCategoryRepository.cs" />
     <Compile Include="_ProductRepository.cs" />
