--- a/MyShop.WebUI/packages.config
+++ b/MyShop.WebUI/packages.config
@@ -40,5 +40,10 @@
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
+  <package id="Unity.Abstractions" version="5.11.7" targetFramework="net472" />
+  <package id="Unity.Container" version="5.11.11" targetFramework="net472" />
+  <package id="Unity.Mvc" version="5.11.1" targetFramework="net472" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
